--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1,3 +1,8 @@
+#container {
+    width: 100%;
+    height: 400px;
+}
+
 #demo-table {
     width: auto;
     font-size: 12px;
@@ -16,3 +21,11 @@
         vertical-align: middle;
     }
 }
+
+.demo-table-wrapper {
+    height: 650px;
+    overflow: auto;
+    display: inline-block;
+    padding: 2px;
+}
+
