--- a/views/demo.jade
+++ b/views/demo.jade
@@ -2,25 +2,64 @@ include ./layout
 
 block content
     h1 Demo
-    form(action='/demo/create', method='post')
-        button(type='submit') Fill db
-    table.table.table-bordered.table-sm#demo-table
-        tr
-            th Week ISO
-            th Sales, UAH
-            th Weighted average
-            th Seasonal coefficient
-            th Period number, x
-            th Sales cleared from seasonality, UAH
-            th Trend, UAH
-            th Forecast, UAH
-        for item in data
+    // form(action='/demo/create', method='post')
+    //     button(type='submit') Fill db
+    div#container
+    div.demo-table-wrapper
+        table.table.table-bordered.table-sm#demo-table
             tr
-                td #{item.weekISO}
-                td #{item.sales}
-                td #{item.weigtedAverage}
-                td #{item.seasonalCoefficient}
-                td #{item.periodNumber}
-                td #{item.seasonalCoefficient}
-                td #{item.trend}
-                td #{item.forecast}
+                th Week ISO
+                th Sales, UAH
+                th Weighted average
+                th Seasonal coefficient
+                th Period number, x
+                th Sales cleared from seasonality, UAH
+                th Trend, UAH
+                th Forecast, UAH
+            for item in data
+                tr
+                    td #{item.weekISO}
+                    td #{item.sales}
+                    td #{item.weigtedAverage}
+                    td #{item.seasonalCoefficient}
+                    td #{item.periodNumber}
+                    td #{item.seasonalCoefficient}
+                    td #{item.trend}
+                    td #{item.forecast}
+    script.
+        $(function () { 
+            var myChart = Highcharts.chart('container', {
+                chart: {
+                    type: 'line'
+                },
+                title: {
+                    text: 'Monthly Average Temperature'
+                },
+                subtitle: {
+                    text: 'Source: WorldClimate.com'
+                },
+                xAxis: {
+                    categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                },
+                yAxis: {
+                    title: {
+                        text: 'Temperature (°C)'
+                    }
+                },
+                plotOptions: {
+                    line: {
+                        dataLabels: {
+                            enabled: true
+                        },
+                        enableMouseTracking: false
+                    }
+                },
+                series: [{
+                    name: 'Tokyo',
+                    data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+                }, {
+                    name: 'London',
+                    data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+                }]
+            });
+        });
