--- a/views/demo.jade
+++ b/views/demo.jade
@@ -2,8 +2,8 @@ include ./layout
 
 block content
     h1 Demo
-    // form(action='/demo/create', method='post')
-    //     button(type='submit') Fill db
+    //- form(action='/demo/create', method='post')
+    //-     button(type='submit') Fill db
     div#container
     div.demo-table-wrapper
         table.table.table-bordered.table-sm#demo-table
