--- a/views/demo.jade
+++ b/views/demo.jade
@@ -28,38 +28,55 @@ block content
                     td #{item.forecast}
     script.
         $(function () { 
-            var myChart = Highcharts.chart('container', {
+                        var myChart = Highcharts.chart('container', {
                 chart: {
-                    type: 'line'
+                    type: 'areaspline'
                 },
                 title: {
-                    text: 'Monthly Average Temperature'
+                    text: 'Average fruit consumption during one week'
                 },
-                subtitle: {
-                    text: 'Source: WorldClimate.com'
+                legend: {
+                    layout: 'vertical',
+                    align: 'left',
+                    verticalAlign: 'top',
+                    x: 150,
+                    y: 100,
+                    floating: true,
+                    borderWidth: 1,
+                    backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColor) || '#FFFFFF'
                 },
                 xAxis: {
-                    categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+                    categories: [#{categories}],
+                    plotBands: [{ // visualize the weekend
+                        from: 4.5,
+                        to: 6.5,
+                        color: 'rgba(68, 170, 213, .2)'
+                    }]
                 },
                 yAxis: {
                     title: {
-                        text: 'Temperature (°C)'
+                        text: 'Fruit units'
                     }
                 },
+                tooltip: {
+                    shared: true,
+                    valueSuffix: ' units'
+                },
+                credits: {
+                    enabled: false
+                },
                 plotOptions: {
-                    line: {
-                        dataLabels: {
-                            enabled: true
-                        },
-                        enableMouseTracking: false
+                    areaspline: {
+                        fillOpacity: 0.5
                     }
                 },
                 series: [{
-                    name: 'Tokyo',
-                    data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
-                }, {
-                    name: 'London',
-                    data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-                }]
+                    name: 'John',
+                    data: [#{actualSales}]
+                },{
+                    name: 'Forecast',
+                    data: [#{forecast}]
+                }
+                ]
             });
         });
