csv upload into database implemented

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -7,15 +7,16 @@
     width: auto;
     font-size: 12px;
     margin: 10px 0 0 10px;
-    
-    & td, th {
+
+    & td,
+    th {
         width: 100px;
     }
-    
+
     & td {
         text-align: right;
     }
-    
+
     & th {
         text-align: center;
         vertical-align: middle;
@@ -28,4 +29,3 @@
     display: inline-block;
     padding: 2px;
 }
-
