seasonal coefficient calculation implemented partially

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -3,7 +3,8 @@
     height: 400px;
 }
 
-#demo-table {
+#demo-table,
+#result-table {
     width: auto;
     font-size: 12px;
     margin: 10px 0 0 10px;
