b value for linear regression calculation implemented

--- a/views/get-start.jade
+++ b/views/get-start.jade
@@ -23,7 +23,7 @@ block content
 				th Weighted average
 				th Seasonal coefficient
 				th Period number, x
-				th Sales cleared from seasonality, UAH
+				th Sales cleared from seasonality, UAH, y
 				th Trend, UAH
 				th Forecast, UAH
 			for item in tableData
