--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,4 +20,4 @@ html
                     li.nav-item
                         a.nav-link(href="/demo") Demo
                     li.nav-item
-                        a.nav-link(href="/getting-started") Getting started
+                        a.nav-link(href="/get-start") Getting started
