--- a/views/get-start.jade
+++ b/views/get-start.jade
@@ -1,94 +1,107 @@
 include ./layout
 
 block content
-    h1 Getting started
-    form(action="/get-start/upload", method="POST", encType="multipart/form-data")
-        p Click <a href="#">here</a> to download an example template. CSV file with ';' (semicolon) delimeter.
-        div.form-group
-            label Upload a csv file
-            input(type="file", name="csv", accept="*.csv").form-control-file
-            button(type="submit").btn.btn-secondary Upload
-    p Clear database
-    form(action="/get-start/clear", method="POST")
-        button(type="submit").btn.btn-primary Clear DB
-    p Calculate forecast
-    form(action="/get-start/calc", method="POST")
-        button(type="submit").btn.btn-primary Calculate 
-    p Resulting chart
-    div#container
-    p Resulting table
-    div.demo-table-wrapper
-        table.table.table-bordered.table-sm#result-table
-            tr
-                th Week ISO
-                th Sales, UAH
-                th Weighted average
-                th Seasonal coefficient
-                th Period number, x
-                th Sales cleared from seasonality, UAH, y
-                th Trend, UAH
-                th Forecast, UAH
-            for item in tableData
-                tr
-                    td #{item.weekISO}
-                    td #{item.sales}
-                    td #{item.weightedAvg}
-                    td #{item.seasCoef}
-                    td #{item.perNum}
-                    td #{item.clearSales}
-                    td #{item.trend}
-                    td #{item.forecast}
-    script.
-        $(function () { 
-                var myChart = Highcharts.chart('container', {
-                chart: {
-                    type: 'areaspline'
-                },
-                title: {
-                    text: 'Actual sales within specified period and forecasted sales'
-                },
-                legend: {
-                    layout: 'vertical',
-                    align: 'left',
-                    verticalAlign: 'top',
-                    x: 150,
-                    y: 100,
-                    floating: true,
-                    borderWidth: 1,
-                    backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColor) || '#FFFFFF'
-                },
-                xAxis: {
-                    categories: [#{cats}],
-                    plotBands: [{ // visualize the weekend
-                        from: 4.5,
-                        to: 6.5,
-                        color: 'rgba(68, 170, 213, .2)'
-                    }]
-                },
-                yAxis: {
-                    title: {
-                        text: 'Sales, UAH'
-                    }
-                },
-                tooltip: {
-                    shared: true,
-                    valueSuffix: ' UAH'
-                },
-                credits: {
-                    enabled: false
-                },
-                plotOptions: {
-                    areaspline: {
-                        fillOpacity: 0.5
-                    }
-                },
-                series: [{
-                    name: 'Actual Sales',
-                    data: [#{sales}]
-                },{
-                    name: 'Forecast',
-                    data: [#{forecast}]
-                }
-                ]
-            });
-        });
+	div.container
+		//- p req.session.valid #{a}
+		h1 Getting started
+		form(action="/get-start/upload", method="POST", encType="multipart/form-data")
+			p Click <a href="#">here</a> to download an example template. CSV file with ';' (semicolon) delimeter.
+			div.form-group
+				label Upload a csv file
+				input(type="file", name="csv", accept="*.csv").form-control-file
+				button(type="submit" disabled).btn.btn-secondary#upload Upload
+		p Calculate forecast
+		form(action="/get-start/calc", method="POST")
+			button(type="submit").btn.btn-primary Calculate 
+		p Clear database
+		form(action="/get-start/clear", method="POST")
+			button(type="submit").btn.btn-primary Clear DB
+		p Resulting chart
+		div#container
+		p Resulting table
+		div.demo-table-wrapper
+			table.table.table-bordered.table-sm#result-table
+				tr
+					th Week ISO
+					th Sales, UAH
+					th Weighted average
+					th Seasonal coefficient
+					th Period number, x
+					th Sales cleared from seasonality, UAH, y
+					th Trend, UAH
+					th Forecast, UAH
+				for item in tableData
+					tr
+					td #{item.weekISO}
+					td #{item.sales}
+					td #{item.weightedAvg}
+					td #{item.seasCoef}
+					td #{item.perNum}
+					td #{item.clearSales}
+					td #{item.trend}
+					td #{item.forecast}
+		div.row
+			div.col-4
+				div.list-group#list-tab(role="tablist")
+					a.list-group-item.list-group-item-action.active#list-home-list(data-toggle="list" href="#list-home" role="tab" aria-controls="home") Home
+					a.list-group-item.list-group-item-action#list-profile-list(data-toggle="list" href="#list-profile" role="tab" aria-controls="profile") Profile
+					a.list-group-item.list-group-item-action#list-messages-list(data-toggle="list" href="#list-messages" role="tab" aria-controls="messages") Messages
+			div.col-8
+				div.tab-content#nav-tabContent
+					div.tab-pane.fade.show.active#list-home(role="tabpanel" aria-labelledby="list-home-list") One
+					div.tab-pane.fade#list-profile(role="tabpanel" aria-labelledby="list-profile-list") Two
+					div.tab-pane.fade#list-messages(role="tabpanel" aria-labelledby="list-messages-list") Three
+		script.
+			$(function () { 
+			var myChart = Highcharts.chart('container', {
+				chart: {
+					type: 'areaspline'
+				},
+				title: {
+					text: 'Actual sales within specified period and forecasted sales'
+				},
+				legend: {
+					layout: 'vertical',
+					align: 'left',
+					verticalAlign: 'top',
+					x: 150,
+					y: 100,
+					floating: true,
+					borderWidth: 1,
+					backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColor) || '#FFFFFF'
+				},
+				xAxis: {
+					categories: [#{cats}],
+					plotBands: [{ // visualize the weekend
+						from: 4.5,
+						to: 6.5,
+						color: 'rgba(68, 170, 213, .2)'
+					}]
+				},
+				yAxis: {
+					title: {
+						text: 'Sales, UAH'
+					}
+				},
+				tooltip: {
+					shared: true,
+					valueSuffix: ' UAH'
+				},
+				credits: {
+					enabled: false
+				},
+				plotOptions: {
+					areaspline: {
+						fillOpacity: 0.5
+					}
+				},
+				series: [{
+					name: 'Actual Sales',
+					data: [#{sales}]
+				},{
+					name: 'Forecast',
+					data: [#{forecast}]
+				}
+				]
+			});
+			});
