--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,8 @@ html
         script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js", integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49", crossorigin="anonymous")
         script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js", integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em", crossorigin="anonymous")
         script(src="https://code.highcharts.com/highcharts.js")
+        script(src="/js/scripts.js")
+
     body
         nav.navbar.navbar-expand-sm.navbar-light.bg-light
             span.navbar-brand Sales Forecast
