--- a/views/home.jade
+++ b/views/home.jade
@@ -1,4 +1,22 @@
 include ./layout
 
 block content
-    h1 Homepage
+	div.container
+		p Welcome to the sales forecast application developed by Oleksii Ablitsov - fullstack javascript developer.
+		p To develop this app I used:
+		ol 
+			li Backend:
+				ul
+					li NodeJS
+					li Express
+					li MongoDB
+					li Mongoose
+			li Front End
+				ul
+					li JQuery
+					li Jade
+					li Bootstrap
+					li Less
+					li HighCharts
+		p Source code of the app can be reviewed at 
+			a(href="https://github.com/partizanen69/sales-forecast-app") GitHub.
