--- a/views/home.jade
+++ b/views/home.jade
@@ -5,18 +5,7 @@ block content
 		p Welcome to the sales forecast application developed by Oleksii Ablitsov - fullstack javascript developer.
 		p To develop this app I used:
 		ol 
-			li Backend:
-				ul
-					li NodeJS
-					li Express
-					li MongoDB
-					li Mongoose
-			li Front End
-				ul
-					li JQuery
-					li Jade
-					li Bootstrap
-					li Less
-					li HighCharts
+			li Backend: NodeJS, Express, MongoDB, Mongoose;
+			li Front End: JQuery, Jade, Bootstrap, Less, HighCharts.
 		p Source code of the app can be reviewed at 
 			a(href="https://github.com/partizanen69/sales-forecast-app") GitHub.
