--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -44,8 +44,26 @@ h2 {
     }
 }
 
-.custom-file-upload:hover {
+.custom-button:hover {
     background: #f8f8f8;
+}
+
+@keyframes rotate {
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+.loading {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    display: inline-block;
+    border: 5px solid rgba(189, 189, 189, 0.25);
+    border-left-color: rgba(3, 155, 229, 1);
+    border-top-color: rgba(3, 155, 229, 1);
+    border-radius: 50%;
+    animation: rotate 600ms infinite linear;
 }
 
 & .result-btns {
