--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -8,6 +8,21 @@ h2 {
     margin-top: 0.5rem;
 }
 
+.app-desc {
+    text-align: center;
+    padding: 20px 20px;
+
+    & .icon {
+        font-size: 70px;
+        color: #dc3545;
+    }
+
+    & .heading {
+        font-weight: bold;
+        margin-bottom: 12px;
+    }
+}
+
 .msg-calc,
 .msg-upload {
     font-size: 14px;
